fix overflow of code block on small screen sixe

--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,7 @@ pre:has(code.highlight),
 pre.highlight:has(code) {
   @apply px-4 py-8 max-sm:-mx-4 border-x-0 sm:border sm:px-8
     max-sm:!rounded-none;
+    overflow-x: auto;
 }
 
 pre:has(code.highlight):where(:hover, :focus) + .copyButton,
